[package]
name = "jastery"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [[bin]]
# name = "build-script"
# path = "build.rs"


[dependencies]
bevy = "0.10.0"
image = "0.24"
uuid = "1.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
pathfinding = "4.2.1"
chrono = "0.4"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2"

js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Window"] }
wasm-bindgen-futures = "0.4.34"

lazy_static = "1.4.0"

ansi_term = "0.12"


[build-dependencies]
walkdir = "2.3.3"
Inflector = "0.11.4"


[profile.release]
debug = false

[profile.dev]
debug = true

