[package]
name = "jastery"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "jastery"


[dependencies]
bevy = "0.10.0"
image = "0.24"
uuid = "1.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
pathfinding = "4.2.1"
chrono = "0.4"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2"

js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Window"] }
wasm-bindgen-futures = "0.4.34"
lazy_static = "1.4.0"

# # dependencies for wasm_build scripts
# md5 = { version = "0.7.0", optional = true }
# regex = { version = "1.7.3", optional = true }

# # dependencies for pre_build scripts
# walkdir = { version = "2.3.3", optional = true }
# Inflector = { version = "0.11.4", optional = true }

[build-dependencies]
# walkdir = "2.3.3"
# Inflector = "0.11.4"
build_scripts = { path = "build_scripts" }


[profile.release]
debug = false

[profile.dev]
debug = true

# [[bin]]
# name = "pre_build"
# path = "build_scripts/src/pre_build.rs"
# required-features = ["pre_build"]

# [[bin]]
# name = "wasm_build"
# path = "build_scripts/src/wasm_build.rs"
# required-features = ["wasm_build"]

# [features]
# default = []
# wasm_build = ["md5","regex"]
# pre_build = ["walkdir","Inflector"]